[gd_scene load_steps=6 format=2]

[ext_resource path="res://Penyimpanan.gd" type="Script" id=1]
[ext_resource path="res://assets/levelPengolahan.png" type="Texture" id=2]
[ext_resource path="res://troliLemuru.tscn" type="PackedScene" id=3]
[ext_resource path="res://troliSlengseng.tscn" type="PackedScene" id=4]
[ext_resource path="res://troliTongkol.tscn" type="PackedScene" id=5]


[node name="NPenyimpanan" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="SBackgroundPenyimpanan" type="Sprite" parent="." index="0"]

position = Vector2( 512.217, 300.186 )
texture = ExtResource( 2 )

[node name="troli1" parent="." index="1" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli2" parent="." index="2" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli3" parent="." index="3" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli4" parent="." index="4" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli5" parent="." index="5" instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli6" parent="." index="6" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli7" parent="." index="7" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli8" parent="." index="8" instance=ExtResource( 5 )]

position = Vector2( 48, 507 )

[node name="troli9" parent="." index="9" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( 48, 507 )

[node name="troli10" parent="." index="10" instance=ExtResource( 4 )]

position = Vector2( 48, 507 )

[connection signal="area_entered" from="troli1/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli2/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli3/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli4/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli5/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli6/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli7/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="troli8/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="mouse_entered" from="troli8/Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="area_entered" from="troli9/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="mouse_entered" from="troli9/Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="area_entered" from="troli10/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="mouse_entered" from="troli10/Area2D" to="." method="_on_Area2D_mouse_entered"]


[editable path="troli1"]
[editable path="troli2"]
[editable path="troli3"]
[editable path="troli4"]
[editable path="troli5"]
[editable path="troli6"]
[editable path="troli7"]
[editable path="troli8"]
[editable path="troli9"]
[editable path="troli10"]
